css/tooplate-portfolio-style.css
/*

Tooplate 2119 Gymso Fitness

https://www.tooplate.com/view/2119-gymso-fitness

*/


  :root {
    --primary-color:        #f13a11;
    --icon-color:           #6d71ad;
    --white-color:          #ffffff;
    --dark-color:           #171819;
    --light-color:          #dad4d4;
    --bg-gray-color:        rgb(228, 228, 228);

    --gray-color:           #909090;
    --link-color:           #404040;
    --code-color:           #67386b;
    --p-color:              #797373;

    --base-font-family:     'Raleway', sans-serif;
    --font-weight-bold:     bold;
    --font-weight-normal:   normal;
    --font-weight-light:    300;
    --font-weight-thin:     100;

    --h1-font-size:         48px;
    --h2-font-size:         36px;
    --h3-font-size:         25px;
    --h4-font-size:         24px;
    --h5-font-size:         22px;
    --h6-font-size:         22px;
    --p-font-size:          16px;
    --base-font-size:       16px;
    --menu-font-size:       14px;

    --border-radius-large:  100%;
    --border-radius-small:  2px;
  }


  body {
    background: var(--white-color);
    font-family: var(--base-font-family);
  }


  /*---------------------------------------
     TYPOGRAPHY              
  -----------------------------------------*/

  h1,h2,h3,h4,h5,h6 {
    font-weight: var(--font-weight-thin);
    line-height: normal;
  }

  h1 {
    font-size: var(--h1-font-size);
    font-weight: var(--font-weight-bold);
    letter-spacing: -1px;
    text-transform: uppercase;
    margin: 20px 0;
  }

  h2 {
    font-size: var(--h2-font-size);
    font-weight: var(--font-weight-bold);
    letter-spacing: -2px;
  }

  h3 {
    font-size: var(--h3-font-size);
    font-weight: var(--font-weight-bold);
    letter-spacing: -1px;
    margin: 0;
  }

  h4 {
    font-size: var(--h4-font-size);
  }

  h5 {
    font-size: var(--h5-font-size);
  }

  h6 {
    color: var(--gray-color);
    font-size: var(--h6-font-size);
    line-height: inherit;
    margin: 0;
  }

  p {
    color: var(--p-color);
    font-size: var(--p-font-size);
    font-weight: var(--font-weight-light);
    line-height: 1.5em;
  }

  b, 
  strong {
    font-weight: var(--font-weight-bold);
    letter-spacing: 0;
  }

  .section {
    padding: 7rem 0;
  }

  .light-text h6 {
    color:var(--light-color);
  }



  /* BUTTON */

  .custom-btn {
    background: transparent;
    width: 85%;
    border-radius: var(--border-radius-small);
    padding: 14px 24px;
    color: var(--white-color);
    font-size: var(--menu-font-size);
    font-weight: var(--font-weight-normal);
    letter-spacing: 0.5px;
    white-space: nowrap;
    transition: all 0.3s ease;
  }

  .custom-btn:hover {
    color: var(--dark-color);
  }

  .custom-btn:focus {
    box-shadow: none;
  }

  .custom-btn.bordered:hover,
  /* .custom-btn.bordered:focus, */
  /* .custom-btn.bg-color:focus, */
  .custom-btn.bg-color:hover {
    background: var(--white-color);
    border-color: transparent;
    color: var(--gray-color);
  }

  .bordered {
    border: 1px solid var(--gray-color);
    color: var(--gray-color);
  }

  .bg-color {
    background: var(--gray-color);
    color: var(--white-color);
  }



  /*---------------------------------------
     GENERAL               
  -----------------------------------------*/

  * {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
  }

  *::before,
  *::after {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
  }

  a {
    color: var(--link-color);
    font-weight: normal;
    text-decoration: none;
    transition: all 0.3s ease;
  }

  a:hover, 
  a:active, 
  a:focus {
    color: var(--gray-color);
    outline: none;
    text-decoration: none;
  }


  /* BG OVERLAY */

  .bg-overlay {
    background: var(--dark-color);
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0.6;
  }

  /*---------------------------------------
     MENU             
  -----------------------------------------*/

  .navbar {
    background: var(--dark-color);
    padding: 1rem;
  }

  .navbar-expand-lg .navbar-nav .nav-link {
    padding-right: 1.5rem;
    padding-left: 1.5rem;
  }

  .navbar-brand {
    color: var(--white-color);
    font-size: var(--h3-font-size);
    font-weight: var(--font-weight-bold);
    line-height: normal;
    padding-top: 0;
  }

  .nav-item .nav-link {
    display: block;
    color: var(--white-color);
    font-size: var(--menu-font-size);
    font-weight: var(--font-weight-normal);
    text-transform: uppercase;
    padding: 2px 6px;
  }

  .nav-item .nav-link.active,
  .nav-item .nav-link:hover {
    color: var(--gray-color);
  }

  .navbar .social-icon li a {
    color: var(--white-color);
  }

  .navbar-toggler {
    border: 0;
    padding: 0;
    cursor: pointer;
    margin: 0 10px 0 0;
    width: 30px;
    height: 35px;
    outline: none;
  }

  .navbar-toggler:focus {
    outline: none;
  }

  .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
    background: transparent;
  }

  .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon::before,
  .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon::after {
    transition: top 300ms 50ms ease, -webkit-transform 300ms 350ms ease;
    transition: top 300ms 50ms ease, transform 300ms 350ms ease;
    transition: top 300ms 50ms ease, transform 300ms 350ms ease, -webkit-transform 300ms 350ms ease;
    top: 0;
  }

  .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon::before {
    transform: rotate(45deg);
  }

  .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon::after {
    transform: rotate(-45deg);
  }

  .navbar-toggler .navbar-toggler-icon {
    background: var(--gray-color);
    transition: background 10ms 300ms ease;
    display: block;
    width: 30px;
    height: 2px;
    position: relative;
  }

  .navbar-toggler .navbar-toggler-icon::before,
  .navbar-toggler .navbar-toggler-icon::after {
    transition: top 300ms 350ms ease, -webkit-transform 300ms 50ms ease;
    transition: top 300ms 350ms ease, transform 300ms 50ms ease;
    transition: top 300ms 350ms ease, transform 300ms 50ms ease, -webkit-transform 300ms 50ms ease;
    position: absolute;
    right: 0;
    left: 0;
    background: var(--gray-color);
    width: 30px;
    height: 2px;
    content: '';
  }

  .navbar-toggler .navbar-toggler-icon::before {
    top: -8px;
  }

  .navbar-toggler .navbar-toggler-icon::after {
    top: 8px;
  }

  /*---------------------------------------
     HERO              
  -----------------------------------------*/

  .hero {
    background-image: url('../images/frontpage3.jpg');
    background-size: cover;
    background-position: top;
    background-repeat: no-repeat;
    vertical-align: middle;
    min-height: 100vh;
    position: relative;
  }

  /*---------------------------------------
     SKILLS               
  -----------------------------------------*/

  #skills {
    background-color:rgb(228, 228, 228);
  }

  #skills svg {
    color: var(--code-color);
    display: block;
    margin: auto;
  }

  .skills-list {
    border-radius: 0 0 2px 2px;
    padding: 1rem 2rem;
    position: relative;
    height: 350px;
  }

  .skills-list p {
    text-align: center;
    line-height: 0.5;
  }

  .lead-space {
    margin-top: 20px;
  }
 

  /*---------------------------------------
     PROJECTS               
  -----------------------------------------*/

  .project-info {
    background: var(--white-color);
    box-shadow: 6px 0 38px rgba(20,20,20,0.10);
    border-radius: 0 0 2px 2px;
    padding: 1rem 2rem;
    position: relative;
    height: 350px;
  }

  .project-thumb img {
    width: 100%;
    height: 200px;
    position: relative;
    border-radius: 2px 2px 0 0;
  }

  .project-thumb img:hover {
    width: 100%;
    height: 200px;
    border-radius: 2px 2px 0 0;
    border: 1px solid black;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.9);
    opacity: 0.75;
  }


  .project-info strong {
    color: var(--gray-color);
  }


  .project-info a {
    color: var(--code-color);
    text-decoration: underline;
    position: absolute;
    bottom: 15px;
    left: 30px;
  }


  

  /*---------------------------------------
     CONTACT              
  -----------------------------------------*/


  .contact {
    background-color: rgb(228, 228, 228);
  }


  .mypic {
    display: block;
  }

  .mypic img {
    height: 250px;
    width: 230px;
    border: 1px solid darkgrey;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.9);
    margin-bottom: 20px;
  }

  


  /*---------------------------------------
     FOOTER              
  -----------------------------------------*/

  .site-footer {
    border-top: 1px solid #efebeb;
    padding: 3rem 0;
  }

  .site-footer a {
    color: var(--p-color);
    font-weight: var(--font-weight-light);
  }

  .site-footer p {
    font-size: var(--base-font-size);
  }

  .contact .fa,
  .site-footer .fa {
    color: var(--gray-color);
  }


  /*---------------------------------------
     SOCIAL ICON              
  -----------------------------------------*/

  .social-icon {
    position: relative;
    padding: 0;
    margin: 5px 0 0 0;
  }

  .social-icon li {
    display: inline-block;
    list-style: none;
  }

  .social-icon li a {
    text-decoration: none;
    display: inline-block;
    color: var(--p-color);
    font-size: var(--p-font-size);
    font-weight: var(--font-weight-bold);
    margin: 5px 10px;
    text-align: center;
  }

  .social-icon li a:hover {
    color: var(--icon-color);
  }


  /*---------------------------------------
     RESPONSIVE STYLES              
  -----------------------------------------*/

  @media screen and (max-width: 992px) {

    .section {
      padding: 5rem 0;
    }

    .nav-item .nav-link {
      padding: 6px;
    }

    .navbar .social-icon {
      margin-top: 22px;
    }

    .navbar-collapse,
    .site-footer {
      text-align: center;
    }

    .schedule-table {
      display: block;
    }

    .modal-content {
      padding: 2rem;
    }
  }

  @media screen and (max-width: 767px) {

    h1 {
      font-size: 38px;
    }

    .about-working-hours {
      border-left: 0;
      padding: 22px 0 0 0;
    }

    .contact h2 span {
      display: block;
    }
  }

